--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 header{
-    background-image: url(img/Cobra-Kai-Wallpaper.png);
+    background-image: url(../img/Cobra-Kai-Wallpaper.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
