--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-    background-color: black;
+    background-color: #292b2c;
 }
 
 header{
@@ -13,6 +13,7 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed;
     height: 100vh;
 }
 
